--- a/app/assets/stylesheets/khroma.css
+++ b/app/assets/stylesheets/khroma.css
@@ -292,7 +292,7 @@
 }
 
 .right-match-col img {
-  object-fit: cover;
+  object-fit: cover !important;
 }
 
 .slick-slide  .product-img  .product-match-overlay-1,
