--- a/app/assets/stylesheets/types.css
+++ b/app/assets/stylesheets/types.css
@@ -8,7 +8,7 @@
 .type-pill {
   width: 100%;
   min-height: 50px;
-  min-width: 80px;
+  min-width: 110px;
   margin-top: 10px;
   font-size: 14px;
   font-weight: 600;
@@ -29,9 +29,13 @@
 .card-header {
   padding-top: 10px;
   padding-bottom: 10px; 
-  display: grid;
-  grid-template-columns: 1fr auto;
-  align-items: center;
+}
+
+.card-header div, .card-header h5, .card-header h6 {
+  display: inline-block;
+}
+.card-header h5 {
+  margin-top: 4px;
 }
 
 .go-more-btn {
